refactor: adapt API of TokenValidationService